fix: add ID to Rightcontent component and update scrollbar styles

--- a/websiteproject/src/index.css
+++ b/websiteproject/src/index.css
@@ -1,10 +1,5 @@
 @import "tailwindcss";
 
-.no-scrollbar::-webkit-scrollbar {
+#Right::-webkit-scrollbar{
   display: none;
-}
-
-.no-scrollbar {
-  -ms-overflow-style: none;  /* IE & Edge */
-  scrollbar-width: none;     /* Firefox */
 }
